using UnityEngine;

public static class Constants
{
  // // TAGS for Things
  // public static readonly string GROUND_TAG = "Ground";

  // // Names of Animation parameters
  // public static readonly string IS_RUNNING_ANIM_STRING = "IsRunning";
  // public static readonly string JUMP_ANIM_TRIGGER_STRING = "Jump";
  // public static readonly string IS_GROUNDED_ANIM_STRING = "IsGrounded";
  // public static readonly string IS_FALLING_ANIM_STRING = "IsFalling";
  // public static readonly string Y_VELOCITY_ANIM_STRING = "yVelocity";

  // Animation strings
  public static readonly string anim_string_SPEED = "Speed";
  public static readonly string anim_string_trigger_JUMP = "Jump";
  public static readonly string anim_string_ISGROUNDED = "IsGrounded";
  public static readonly string anim_string_ISMOVING = "IsMoving";
  public static readonly string anim_string_Y_VELOCITY = "yVelocity";
  public static readonly string anim_string_ISJUMPING = "IsJumping";
  public static readonly string anim_string_ISFALLING = "IsFalling";
}
